--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,16 +1,11 @@
-@import 'reset_style.scss';
-@import 'base/func';
-@import 'fonts/font';
-@import 'base/ui';
-@import 'base/animation';
+@import "reset_style.scss";
+@import "base/func";
+@import "fonts/font";
+@import "base/ui";
+@import "base/animation";
 
-@import '../css/bootstrap.min.css';
+@import "../css/bootstrap.min.css";
 //@import "libs/slick-theme.scss";
-@import 'libs/slick.scss';
+@import "libs/slick.scss";
 
-@import 'components/popup';
-@import 'components/header';
-@import 'components/slider';
-@import 'components/footer';
-@import 'components/hero';
-@import 'components/projects';
+@import "components/header";
