--- a/src/sass/reset_style.scss
+++ b/src/sass/reset_style.scss
@@ -83,7 +83,7 @@ body {
 	line-height: 1;
 }
 body ::selection {
-	background-color: red;
+	background-color: #1876f2;
 	color: white;
 }
 
@@ -91,7 +91,7 @@ body::-webkit-scrollbar {
 	width: 5px; /* Adjust the width as needed */
 }
 body::-webkit-scrollbar-thumb {
-	background-color: rgb(231, 0, 0); /* Set your desired color */
+	background-color: #1876f2; /* Set your desired color */
 	border-radius: 5px;
 }
 
@@ -119,7 +119,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-	content: '';
+	content: "";
 	content: none;
 }
 a {
