create left and right sidebar, sort templates

--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -30,7 +30,7 @@
 
          <form class="form-search">
             <img src="img/search.png" alt="search">
-            <input type="text" placeholder="Search">
+            <input type="text" placeholder="Пошук">
          </form>
 
          <div class="user-profile online">
