--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,8 @@
 @import "libs/slick.scss";
 
 @import "components/header";
+@import "components/left-sidebar";
+@import "components/right-sidebar";
 
 // pages
 @import "pages/main-page";
