create animation fadeleft

--- a/src/sass/components/_left-sidebar.scss
+++ b/src/sass/components/_left-sidebar.scss
@@ -4,6 +4,7 @@
       position: sticky;
       top: 70px;
       align-self: flex-start;
+      animation: fadeInLeft 1s;
       &-links {
          border-bottom: 1px solid #ccc;
          li {
