--- a/src/sass/base/_animation.scss
+++ b/src/sass/base/_animation.scss
@@ -7,11 +7,11 @@
    }
 }
 
-@keyframes fadeInUp {
+@keyframes fadeInLeft {
    0% {
       opacity: 0;
-      -webkit-transform: translate3d(0, 100%, 0);
-      transform: translate3d(0, 100%, 0);
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
    }
 
    100% {
@@ -32,13 +32,4 @@
       -webkit-transform: translate3d(0, 0, 0);
       transform: translate3d(0, 0, 0);
    }
-}
-.fadeInUp {
-   animation: fadeInUp 1s ease-in-out;
-}
-.fedeInUp20px {
-   animation: fedeInUp20px 1s ease-in-out;
-}
-.delay-1 {
-   animation-delay: 0.2s;
 }
