--- a/src/sass/pages/main-page.scss
+++ b/src/sass/pages/main-page.scss
@@ -5,5 +5,38 @@
 
    &__content {
       flex-basis: 48%;
+
+      .story-gallery {
+         display: flex;
+         justify-content: space-between;
+         margin-bottom: 20px;
+
+         .story {
+            flex-basis: 18%;
+            padding-top: 32%;
+            position: relative;
+            background-position: center;
+            background-size: cover;
+            border-radius: 10px;
+
+            img {
+               position: absolute;
+               width: 45px;
+               border-radius: 50%;
+               top: 10px;
+               left: 10px;
+               border-radius: 5px solid #626262;
+            }
+
+            p {
+               position: absolute;
+               bottom: 10px;
+               width: 100%;
+               text-align: center;
+               color: #fff;
+               font-size: 14px;
+            }
+         }
+      }
    }
 }
