--- a/src/sass/components/_right-sidebar.scss
+++ b/src/sass/components/_right-sidebar.scss
@@ -8,6 +8,7 @@
       padding: 20px;
       border-radius: 4px;
       color: #626262;
+      animation: fadeInRight 0.5s;
 
       &-title {
          display: flex;
