--- a/src/sass/base/_animation.scss
+++ b/src/sass/base/_animation.scss
@@ -27,3 +27,33 @@
       transform: translate3d(0, 0, 0);
    }
 }
+
+// Animation for main menu
+@keyframes fadeInUp {
+   0% {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 100%, 0);
+      transform: translate3d(0, 100%, 0);
+   }
+
+   100% {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+   }
+}
+
+// Animation for main menu
+@keyframes fadeInDown {
+   0% {
+      opacity: 0;
+      -webkit-transform: translate3d(0, -100%, 0);
+      transform: translate3d(0, -100%, 0);
+   }
+
+   100% {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+   }
+}
