--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,7 @@
 @import "libs/slick.scss";
 
 @import "components/header";
+@import "components/footer";
 @import "components/main-story";
 @import "components/main-content";
 @import "components/left-sidebar";
