--- a/src/sass/base/ui.scss
+++ b/src/sass/base/ui.scss
@@ -27,3 +27,24 @@ a {
 		background: #41db51;
 	}
 }
+
+// ***************************************
+.user-profile {
+	display: flex;
+	align-items: center;
+	img {
+		width: 45px;
+		border-radius: 50%;
+		margin-right: 10px;
+	}
+	.user-profile-info {
+		p {
+			margin-bottom: 2px;
+			font-weight: 500;
+			color: #626262;
+		}
+		small {
+			font-size: 12px;
+		}
+	}
+}
