--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-   background-color: #1876f2;
+   background-color: var(--nav-color);
    padding: 5px 5%;
    position: sticky;
    top: 0;
@@ -58,16 +58,93 @@
             }
          }
 
-         .user-profile {
+         .user-profiles {
             margin-left: 30px;
-            a {
-               img {
-                  width: 40px;
+            img {
+               width: 40px;
+               border-radius: 50%;
+               cursor: pointer;
+            }
+         }
+      }
+
+      .settings-menu {
+         position: absolute;
+         width: 90%;
+         max-width: 350px;
+         background-color: var(--bg-color);
+         box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+         border-radius: 4px;
+         overflow: hidden;
+         top: 108%;
+         right: 5%;
+         height: 0%;
+         transition: 0.3s;
+
+         #dark-theme {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            cursor: pointer;
+            background: #ccc;
+            width: 45px;
+            border-radius: 15px;
+            padding: 2px 3px;
+            display: flex;
+            transition:
+               padding-left 0.3s,
+               background 0.3s;
+
+            span {
+               width: 18px;
+               height: 18px;
+               border-radius: 50%;
+               background: #fff;
+               display: inline-block;
+               transition: 0.3s;
+            }
+         }
+         #dark-theme.dark-btn {
+            padding-left: 23px;
+            background: #bc2f2f;
+         }
+
+         hr {
+            border: 0;
+            height: 1px;
+            background: #9a9a9a;
+            margin: 15px 0;
+         }
+
+         .settings-menu-container {
+            padding: 20px;
+            .user-profiles {
+               a {
+                  font-size: 12px;
+                  color: #1876f2;
+               }
+            }
+
+            .setting-links {
+               display: flex;
+               align-items: center;
+               margin: 15px 0;
+
+               .setting-icon {
+                  width: 38px;
+                  margin-right: 10px;
                   border-radius: 50%;
-                  cursor: pointer;
+               }
+
+               a {
+                  color: #9a9a9a;
                }
             }
          }
+      }
+
+      .settings-active {
+         height: 400px;
       }
    }
 }
