--- a/src/sass/components/_right-sidebar.scss
+++ b/src/sass/components/_right-sidebar.scss
@@ -4,7 +4,7 @@
       position: sticky;
       top: 70px;
       align-self: flex-start;
-      background: #fff;
+      background: var(--bg-color);
       padding: 20px;
       border-radius: 4px;
       color: #626262;
