--- a/src/sass/reset_style.scss
+++ b/src/sass/reset_style.scss
@@ -79,11 +79,24 @@ video {
 	vertical-align: baseline;
 	background: transparent;
 }
+
+:root {
+	--body-color: #efefef;
+	--nav-color: #1876f2;
+	--bg-color: #fff;
+}
+.dark-theme {
+	--body-color: #0a0a0a;
+	--nav-color: #000;
+	--bg-color: #000;
+}
 body {
 	line-height: 1;
 	font-family: "poppins", sans-serif !important;
-	background-color: #eeedef;
+	background: var(--body-color);
+	transition: background 0.3s;
 }
+
 body ::selection {
 	background-color: #1876f2;
 	color: white;
