hide panel elements

--- a/src/components/_right-sidebar.html
+++ b/src/components/_right-sidebar.html
@@ -3,7 +3,7 @@
    <!-- EVENTS TITLE -->
    <div class="main__right-title">
       <h4>Події</h4>
-      <a href="#" class="events-btn">Переглянути Усі</a>
+      <div class="events-btn">Переглянути Усі</div>
    </div>
    <!-- EVENTS END -->
 
@@ -42,7 +42,7 @@
    <!-- EVENTS TITLE AD -->
    <div class="main__right-title">
       <h4>Реклама</h4>
-      <a href="#" class="events-btn">Закрити</a>
+      <div class="events-btn" id="closeAdvertisement">Закрити</div>
    </div>
    <!-- EVENTS END -->
 
@@ -55,7 +55,7 @@
    <!-- EVENTS TITLE СHAT -->
    <div class="main__right-title">
       <h4>Чат</h4>
-      <a href="#" class="events-btn">Сховати чат</a>
+      <div class="events-btn" id="hideChat">Сховати чат</div>
    </div>
    <!-- EVENTS END -->
 
