start profile page

--- a/src/components/_header.html
+++ b/src/components/_header.html
@@ -54,7 +54,7 @@
                <img src="img/vasa.jpg" alt="persone">
                <div class="user-profile-info">
                   <p>Вася Мелько</p>
-                  <a href="#">Переглянути профіль</a>
+                  <a href="profile.html">Переглянути профіль</a>
                </div>
             </div>
             <hr>
