--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,5 +15,8 @@
 @import "components/left-sidebar";
 @import "components/right-sidebar";
 
+// profile container
+@import "components/profile-container";
+
 // pages
 @import "pages/main-page";
