--- a/src/components/_right-sidebar.html
+++ b/src/components/_right-sidebar.html
@@ -3,7 +3,7 @@
    <!-- EVENTS TITLE -->
    <div class="main__right-title">
       <h4>Події</h4>
-      <div class="events-btn">Переглянути Усі</div>
+      <div class="events-btn" id="showAllEventsPopup">Переглянути Усі</div>
    </div>
    <!-- EVENTS END -->
 
