--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,7 @@
 @import "components/main-content";
 @import "components/left-sidebar";
 @import "components/right-sidebar";
+@import "components/all-events";
 
 // profile container
 @import "components/profile-container";
