--- a/src/sass/components/_left-sidebar.scss
+++ b/src/sass/components/_left-sidebar.scss
@@ -5,6 +5,32 @@
       top: 70px;
       align-self: flex-start;
       animation: fadeInLeft 1s;
+      top: 0;
+      left: 0;
+      transition: 0.5s;
+
+      @media screen and (max-width: 992px) {
+         position: fixed;
+         left: -50%;
+         z-index: 10;
+         background: white;
+         width: 50%;
+         padding: 20px;
+      }
+
+      .left-mobile-menu {
+         position: absolute;
+         width: 40px;
+         height: 40px;
+         background-color: #9a9a9a;
+         top: 10%;
+         right: -8%;
+         padding: 4px;
+         svg {
+            width: 30px;
+         }
+      }
+
       &-links {
          border-bottom: 1px solid #ccc;
          li {
@@ -50,4 +76,8 @@
          }
       }
    }
+}
+
+.active-left-bar {
+   left: 0%;
 }
