--- a/src/sass/components/_main-content.scss
+++ b/src/sass/components/_main-content.scss
@@ -1,5 +1,8 @@
 .main {
    &__content {
+      @media screen and (max-width: 992px) {
+         width: 70%;
+      }
       // content
       &-post {
          width: 100%;
