--- a/src/sass/pages/main-page.scss
+++ b/src/sass/pages/main-page.scss
@@ -2,4 +2,9 @@
    display: flex;
    justify-content: space-between;
    padding: 13px 5%;
+
+   @media screen and (max-width: 992px) {
+      padding: 13px 3%;
+      justify-content: space-evenly;
+   }
 }
