Fix style left sidebar

--- a/src/components/_left-sidebar.html
+++ b/src/components/_left-sidebar.html
@@ -13,71 +13,73 @@
       </svg>
    </div>
 
-   <ul class="main__left-links">
-      <li>
-         <a href="#">
-            <img src="img/news.png" alt="news">
-            Останні новини
-         </a>
-      </li>
-      <li>
-         <a href="#">
-            <img src="img/friends.png" alt="firends">
-            Друзі
-         </a>
-      </li>
-      <li>
-         <a href="#">
-            <img src="img/group.png" alt="groups">
-            Групи
-         </a>
-      </li>
-      <li>
-         <a href="#">
-            <img src="img/marketplace.png" alt="marketplace">
-            Покупки
-         </a>
-      </li>
-      <li>
-         <a href="#">
-            <img src="img/watch.png" alt="video">
-            Відео
-         </a>
-      </li>
-      <li class="link-more">
-         <a href="#">
-            Дивись більше
-         </a>
-      </li>
-   </ul>
+   <div class="letf-container">
+      <ul class="main__left-links">
+         <li>
+            <a href="#">
+               <img src="img/news.png" alt="news">
+               Останні новини
+            </a>
+         </li>
+         <li>
+            <a href="#">
+               <img src="img/friends.png" alt="firends">
+               Друзі
+            </a>
+         </li>
+         <li>
+            <a href="#">
+               <img src="img/group.png" alt="groups">
+               Групи
+            </a>
+         </li>
+         <li>
+            <a href="#">
+               <img src="img/marketplace.png" alt="marketplace">
+               Покупки
+            </a>
+         </li>
+         <li>
+            <a href="#">
+               <img src="img/watch.png" alt="video">
+               Відео
+            </a>
+         </li>
+         <li class="link-more">
+            <a href="#">
+               Дивись більше
+            </a>
+         </li>
+      </ul>
 
-   <!-- SHORTCUTS -->
-   <ul class="main__left-shortcuts">
-      <p>Ваші посилання</p>
-      <li>
-         <a href="#">
-            <img src="img/shortcut-1.png" alt="web-development">
-            Веб Розробка
-         </a>
-      </li>
-      <li>
-         <a href="#">
-            <img src="img/shortcut-2.png" alt="web-design">
-            Курс веб Дизайн
-         </a>
-      </li>
-      <li>
-         <a href="#">
-            <img src="img/shortcut-3.png" alt="full-stack">
-            Full Stack Розробка
-         </a>
-      </li>
-      <li>
-         <a href="#">
-            <img src="img/shortcut-4.png" alt="web">
-            Веб Курс
-         </a>
-      </li>
-   </ul>
+      <!-- SHORTCUTS -->
+      <ul class="main__left-shortcuts">
+         <p>Ваші посилання</p>
+         <li>
+            <a href="#">
+               <img src="img/shortcut-1.png" alt="web-development">
+               Веб Розробка
+            </a>
+         </li>
+         <li>
+            <a href="#">
+               <img src="img/shortcut-2.png" alt="web-design">
+               Курс веб Дизайн
+            </a>
+         </li>
+         <li>
+            <a href="#">
+               <img src="img/shortcut-3.png" alt="full-stack">
+               Full Stack Розробка
+            </a>
+         </li>
+         <li>
+            <a href="#">
+               <img src="img/shortcut-4.png" alt="web">
+               Веб Курс
+            </a>
+         </li>
+      </ul>
+   </div>
 
 </div>
